Fixed right page spacing issue

--- a/src/app/about/about.component.css
+++ b/src/app/about/about.component.css
@@ -8,54 +8,10 @@ img {
 }
 
 .aboutText {
-  background-color: #ddd9d9;
+  background-color: #f0ebeb;
+  border-radius: 5px;
 }
 
-.aboutIconsContainer {
-  padding-left: 10em;
-}
-
-.aboutIconsGroup ~ .aboutIconsGroup {
-  margin-top: 30px;
-}
-
-.aboutIconsGroup {
-  margin-top: 0px;
-}
-
-.servicenowLogo {
-  display: block;
-  margin-left: 18px;
-}
-
-.angularLogo {
-  display: inline-block;
-}
-
-.htmlLogo {
-  display: inline-block;
-}
-
-.javascriptLogo {
-  display: inline-block;
-}
-
-.typescriptLogo {
-  display: inline-block;
-}
-
-.nodejsLogo {
-  display: inline-block;
-}
-
-.mongodbLogo {
-  display: inline-block;
-}
-
-.cssLogo {
-  display: inline-block;
-}
-
-.bootstrapLogo {
-  display: inline-block;
+.aboutIcon {
+  margin-top: 25px;
 }
