--- a/src/app/home/home.component.css
+++ b/src/app/home/home.component.css
@@ -13,8 +13,6 @@ header video {
   left: 50%;
   min-width: 100%;
   min-height: 100%;
-  width: auto;
-  height: auto;
   z-index: 0;
   background-size: cover;
   overflow: hidden;
